- Updated issue order to match changelog - Updated some issue references that were closed on March 20th but were actually fixed pre-release - Updated full name of new contributors to match changelog

--- a/_posts/2019-03-17-pencil2d-0.6.3-release.md
+++ b/_posts/2019-03-17-pencil2d-0.6.3-release.md
@@ -21,7 +21,7 @@ To everyone that contributed and made this release possible. Thank you!
 [nevdokimof]: https://github.com/nevdokimof
 
 ## Flipping / Rolling
-[#1131](https://github.com/pencil2d/pencil/pull/1131) (by [davidlamhauge][david])
+[#978](https://github.com/pencil2d/pencil/pull/978) (by [David Lamhauge][david])
 
 Flipping & Rolling are two techniques that allow animators to quickly preview their animation work.
 
@@ -31,14 +31,13 @@ Rolling technique is used to check a specific part of the action of the animatio
 
 ## New Features
 
-- [#1109](https://github.com/pencil2d/pencil/pull/1109) Import images as new layers on specific frames based on filename and numbering postfix e.g., Joe0001.png', 'Joe0002.png', etc (by [davidlamhauge][david]).
-- [#1074](https://github.com/pencil2d/pencil/issues/1074), [#1121](https://github.com/pencil2d/pencil/pull/1121) Added a slider for changing frame size at timeline (by [davidlamhauge][david]).
+- [#1068](https://github.com/pencil2d/pencil/pull/1068) Added support for TIFF format (by [Andrey Nevdokimof][nevdokimof]).
+- [#1074](https://github.com/pencil2d/pencil/issues/1074), [#1121](https://github.com/pencil2d/pencil/pull/1121) Added a slider for changing frame size at timeline (by [David Lamhauge][david]).
+- [#1109](https://github.com/pencil2d/pencil/pull/1109) Import images as new layers on specific frames based on filename and numbering postfix e.g., Joe0001.png', 'Joe0002.png', etc (by [David Lamhauge][david]).
 - [#1115](https://github.com/pencil2d/pencil/pull/1115) Added support for transparency in exporting WebM and APNG.
-- [#1078](https://github.com/pencil2d/pencil/pull/1078) Be able to set grid size in Preferences (by [davidlamhauge][david]).
-- [#1068](https://github.com/pencil2d/pencil/pull/1068) Added support for TIFF format (by [nevdokimof][nevdokimof]).
 - [#1126](https://github.com/pencil2d/pencil/pull/1126) Check for Pencil2D updates. (+ Added forum/discord links in Help menu.)
 - [#1136](https://github.com/pencil2d/pencil/pull/1136) Added an option to export key frames only when exporting image sequence.
-- [#1145](https://github.com/pencil2d/pencil/pull/1145) Added zoom shortcuts from 25% up to 400% as 1, 2, 3, 4 and Shift+2, 3, 4. (by [davidlamhauge][david])
+- [#1145](https://github.com/pencil2d/pencil/pull/1145) Added zoom shortcuts from 25% up to 400% as 1, 2, 3, 4 and Shift+2, 3, 4. (by [David Lamhauge][david])
 
 ## Translations
 
@@ -46,66 +45,68 @@ There are 3 new languages added in this version: **Catalan, Greek and Kabyle**. 
 
 ## Enhancements
 
-- [#1059](https://github.com/pencil2d/pencil/pull/1059), [#1168](https://github.com/pencil2d/pencil/pull/1168) Improved stroke accuracy by using Qt tablet events.
-- [4f7b4bb](https://github.com/pencil2d/pencil/commit/4f7b4bb8244114c43e3742a6c1a2602ef0d41d5a) Improved the sound key length accuracy.
-- [#1102](https://github.com/pencil2d/pencil/issues/1102) Added cached frame pool size to preferences. (by [0x72D0](https://github.com/0x72D0))
-- [#1100](https://github.com/pencil2d/pencil/issues/1100) Improved the quality of exporting an .avi video.
-- [#1143](https://github.com/pencil2d/pencil/pull/1143) Remember last used FPS and camera sizes as default values when you create a new project.
-- [#1147](https://github.com/pencil2d/pencil/issues/1147) Move layers rather than swap when rearrange layers in Timeline. (by [davidlamhauge][david])
-- [#1176](https://github.com/pencil2d/pencil/pull/1176) Make default palette file filter for suppored formats
 - [#1065](https://github.com/pencil2d/pencil/pull/1065) Fixed error message dialog typo (by [Mattia Rizzolo][mapreri]).
+- [#1066](https://github.com/pencil2d/pencil/pull/1066) Implement individual division lines for the grid system (Preferences) (by [David Lamhauge][david]).
 - [#1086](https://github.com/pencil2d/pencil/issues/1086), [#1087](https://github.com/pencil2d/pencil/pull/1087) Prevent layers with duplicate names 
 - [#1091](https://github.com/pencil2d/pencil/issues/1091) Number postfix name suggestion when creating a new layer.
+- [#1100](https://github.com/pencil2d/pencil/issues/1100) Improved the quality of exporting an .avi video.
+- [#1102](https://github.com/pencil2d/pencil/issues/1102) Added cached frame pool size to preferences. (by [Lucas Mongrain](https://github.com/0x72D0))
 - [#1108](https://github.com/pencil2d/pencil/pull/1108) Improved *.gpl import algorithm
-- [#1137](https://github.com/pencil2d/pencil/pull/1137) Improve darkmode QDockWidget titlebar for macOS (Mojave)
+- [#1143](https://github.com/pencil2d/pencil/pull/1143) Remember last used FPS and camera sizes as default values when you create a new project.
+- [#1147](https://github.com/pencil2d/pencil/issues/1147) Move layers rather than swap when rearrange layers in Timeline. (by [David Lamhauge][david])
+- [#1176](https://github.com/pencil2d/pencil/pull/1176) Make default palette file filter for suppored formats
 
 ## Fixes
 
+- [#926](https://github.com/pencil2d/pencil/issues/926), [#1148](https://github.com/pencil2d/pencil/pull/1148) Scrubber should move to start of range on playback, if outside the range.
+- [#1059](https://github.com/pencil2d/pencil/pull/1059), [#1168](https://github.com/pencil2d/pencil/pull/1168) Improved stroke accuracy by using Qt tablet events.
 - [#1089](https://github.com/pencil2d/pencil/issues/1089) Fixed Copy & Paste function (Ctrl+C / Ctrl+V) not working.
-- [#1111](https://github.com/pencil2d/pencil/pull/1111) Fixed possibly frame lost during file save.
-- [#1107](https://github.com/pencil2d/pencil/issues/1107) Fixed miscellaneous g++ compiler warnings.
-- [#1101](https://github.com/pencil2d/pencil/issues/1101),[#1103](https://github.com/pencil2d/pencil/pull/1103) Disable range spinboxes at startup (by [davidlamhauge][david]).
-- [#1096](https://github.com/pencil2d/pencil/issues/1096) Fixed crash and related issues on layer delete.
-- [#1095](https://github.com/pencil2d/pencil/issues/1095) Fixed move tool crash on camera layer.
-- [#1090](https://github.com/pencil2d/pencil/issues/1090), [#1123](https://github.com/pencil2d/pencil/pull/1123) Fixed image export issues (by [przet](https://github.com/przet)).
+- [#1090](https://github.com/pencil2d/pencil/issues/1090), [#1123](https://github.com/pencil2d/pencil/pull/1123) Fix image export issues (by [Philippe Rzetelski](https://github.com/przet)).
+- [#1092](https://github.com/pencil2d/pencil/issues/1092) Application icon disappeared after loading a file.
+- [#1093](https://github.com/pencil2d/pencil/issues/1093), [#1161](https://github.com/pencil2d/pencil/issues/1161) Fixed: the recent opened file list got reversed every time when loading a project. (by [Matthew McGonagle](https://github.com/MatthewMcGonagle))
+- [#1094](https://github.com/pencil2d/pencil/issues/1094), [#1104](https://github.com/pencil2d/pencil/pull/1104) Fixed *.gpl (Gimp Palette) file import algorithm. (by [Andrey Nevdokimof][nevdokimof])
+- [#1095](https://github.com/pencil2d/pencil/issues/1095) Fix move tool crash on camera layer.
+- [#1096](https://github.com/pencil2d/pencil/issues/1096) Fix crash and related issues on layer delete.
+- [#1101](https://github.com/pencil2d/pencil/issues/1101),[#1103](https://github.com/pencil2d/pencil/pull/1103) Disable range spinboxes at startup (by [David Lamhauge][david]).
+- [#1107](https://github.com/pencil2d/pencil/issues/1107) Fixed miscelaneous g++ compiler warnings.
+- [#1111](https://github.com/pencil2d/pencil/pull/1111) Fix rename optimization during file save.
 - [#1134](https://github.com/pencil2d/pencil/pull/1134) Remove "Show Tab Bar" from the View menu on newer versions of macOS (e.g Mojave).
+- [#1135](https://github.com/pencil2d/pencil/pull/1135) Fix Error on digit count for numbered sequence file import
+- [#1137](https://github.com/pencil2d/pencil/pull/1137) Improve darkmode QDockWidget titlebar for macOS (Mojave)
+- [#1139](https://github.com/pencil2d/pencil/pull/1139) Fix audio volume in movie export if the project contains multiple audio clips.
+- [#1141](https://github.com/pencil2d/pencil/pull/1141), [#1132](https://github.com/pencil2d/pencil/pull/1132) Resolved miscelanous warnings (NULL and C-style Casts) (by [David Lamhauge][david])
 - [#1142](https://github.com/pencil2d/pencil/pull/1142) Force light theme on newer versions of macOS (e.g Mojave)
 - [#1144](https://github.com/pencil2d/pencil/pull/1144) Renable dark mode on newer versions of macOS (e.g Mojave)
-- [#1139](https://github.com/pencil2d/pencil/pull/1139) Fix audio volume in movie export if the project contains multiple audio clips.
-- [#926](https://github.com/pencil2d/pencil/issues/926), [#1148](https://github.com/pencil2d/pencil/pull/1148) Scrubber should move to start of range on playback, if outside the range.
+- [#1154](https://github.com/pencil2d/pencil/issues/1154),[#1155](https://github.com/pencil2d/pencil/pull/1155) Fix pressure artifacts at end of brush stroke
 - [#1157](https://github.com/pencil2d/pencil/issues/1157) Fixed audio synchronization issue.
-- [#1093](https://github.com/pencil2d/pencil/issues/1093), [#1161](https://github.com/pencil2d/pencil/issues/1161) Fixed: the recent opened file list got reversed every time when loading a project. (by [MatthewMcGonagle](https://github.com/MatthewMcGonagle))
-- [#940](https://github.com/pencil2d/pencil/pull/940) Fixed: project corrupted because comma is used as decimal separator in some places instead of period.
-- [b1064ab](https://github.com/pencil2d/pencil/commit/b1064ab8fd1748862c27dfd5c22464d470cfd05f) Fix auto-crop being disabled in duplicate frames.
-- [#1092](https://github.com/pencil2d/pencil/issues/1092) Application icon disappeared after loading a file.
+- [#1166](https://github.com/pencil2d/pencil/pull/1166) Fix XML fields corrupting because of locale decimal types.
 - [#1175](https://github.com/pencil2d/pencil/issues/1175)  Color wheel sometimes went greyscale.
 - [#1181](https://github.com/pencil2d/pencil/pull/1181) Fix canvas bugs
-- [#1154](https://github.com/pencil2d/pencil/issues/1154),[#1155](https://github.com/pencil2d/pencil/pull/1155) Fix pressure artifacts at end of brush stroke
 - [#1188](https://github.com/pencil2d/pencil/pull/1188) Miscellaneous fixes: Fixes regression for [#677](https://github.com/pencil2d/pencil/issues/677). Fixes duplicate selection box.
-- [#1094](https://github.com/pencil2d/pencil/issues/1094), [#1104](https://github.com/pencil2d/pencil/pull/1104) Fixed *.gpl (Gimp Palette) file import algorithm. (by [nevdokimof][nevdokimof])
-- [#1135](https://github.com/pencil2d/pencil/pull/1135) Fix Error on digit count for numbered sequence file import
-- [#1141](https://github.com/pencil2d/pencil/pull/1141), [#1132](https://github.com/pencil2d/pencil/pull/1132) Resolved miscelanous warnings (NULL and C-style Casts) (by [davidlamhauge][david])
+- [4f7b4bb](https://github.com/pencil2d/pencil/commit/4f7b4bb8244114c43e3742a6c1a2602ef0d41d5a) Improved the sound key length accuracy.
+- [b1064ab](https://github.com/pencil2d/pencil/commit/b1064ab8fd1748862c27dfd5c22464d470cfd05f) Fix auto-crop being disabled in duplicate frames.
 - [aafd048](https://github.com/pencil2d/pencil/commit/aafd048a20abbfe5d1e62647fc64ff524c5a4be7) Fix: mistakingly empty the filename of source keyframe when duplicating a frame
 
 ## Known Issues
 
-While there seems to be a growing list of Know issues, make no mistake, we are working hard on reviewing and fixing them as thoroughly as possible.
+While there seems to be a growing list of Know issues, make no mistake, we are working hard on reviewing and fixing them as thoroughly as possible, and with this release you'll notice plenty of improvements on key areas so don't worry!
 
-- [#1192](https://github.com/pencil2d/pencil/issues/1192) When using the flipping & rolling feature, if you quickly try to drag the scrub header when the action occurs, Pencil2D will crash. (there is a fix already awaiting approval)
-- [#1019](https://github.com/pencil2d/pencil/issues/1019) The program may crash or erase selection content when using the `ALT + TAB / APPLE + TAB / SHIFT + TAB` shortcut.
+- [#748](https://github.com/pencil2d/pencil/issues/748), [#1004](https://github.com/pencil2d/pencil/issues/1004), [#1098](https://github.com/pencil2d/pencil/issues/1098), [#1120](https://github.com/pencil2d/pencil/issues/1120), [#1170](https://github.com/pencil2d/pencil/issues/1170) Miscellaneous undo/redo issues. Should hopefully be fixed in v0.6.5.
+- [#940](https://github.com/pencil2d/pencil/issues/940) project is corrupted because comma is used as decimal separator in some countries instead of period. Some fixes were applied, but the issue is persisting.
 - [#1033](https://github.com/pencil2d/pencil/issues/1033) Sound import and playback does not work with the Linux AppImage. Workaround: use [flatpak](https://flathub.org/apps/details/org.pencil2d.Pencil2D) or your distro package manager (if it offers the latest version).
-- [#940](https://github.com/pencil2d/pencil/pull/940) Pending improvements: project is corrupted because comma is used as decimal separator in some countries instead of period.
-- [#1133](https://github.com/pencil2d/pencil/issues/1133) Lag and buggy strokes with Huion tablets. Workaround: disabling the "linear optimizer" in your tablet driver may help if that option is available, see [this post](https://discuss.pencil2d.org/t/difficulty-with-tablet/1369/9?u=scribblemaniac).
-- [#748](https://github.com/pencil2d/pencil/issues/748), [#1004](https://github.com/pencil2d/pencil/issues/1004), [#1120](https://github.com/pencil2d/pencil/issues/1120), [#1170](https://github.com/pencil2d/pencil/issues/1170), [#1098](https://github.com/pencil2d/pencil/issues/1098) Miscellaneous undo/redo issues. Should hopefully be fixed in v0.6.5.
-- [#1174](https://github.com/pencil2d/pencil/issues/1174) Inconsistent palette import behavior: the new palette may append or overwrite the existing palette depending on the file format.
 - [#1117](https://github.com/pencil2d/pencil/issues/1117) The CLI (Command-Line Interface) export operation consumes more memory than exporting from within the editor itself.
-- [#1120](https://github.com/pencil2d/pencil/issues/1120) Undoing Selection Flip X/Y will delete the drawing instead.
+- [#1019](https://github.com/pencil2d/pencil/issues/1019) The program may crash or erase selection content when using the `ALT + TAB / APPLE + TAB / SHIFT + TAB` shortcut.
+- [#1120](https://github.com/pencil2d/pencil/issues/1120) Undoing Selection Flip X / Y will delete the drawing instead.
+- [#1133](https://github.com/pencil2d/pencil/issues/1133) Lag and buggy strokes with Huion tablets. Workaround: disabling the "linear optimizer" in your tablet driver may help if that option is available, see [this post](https://discuss.pencil2d.org/t/difficulty-with-tablet/1369/9?u=scribblemaniac).
+- [#1174](https://github.com/pencil2d/pencil/issues/1174) Inconsistent palette import behavior: Depending on which palette file format is used, the new palette may append or overwrite the existing palette.
 - [#1177](https://github.com/pencil2d/pencil/issues/1177) Imported image position is modified by the canvas view center
-- [#1179](https://github.com/pencil2d/pencil/issues/1179) An audio delay of 1-2 frames between in-editor playback & exported files. However on some systems the opposite happens where the audio delay on playback might be longer by 12-16 or more frames, but on export it works ok.
+- [#1179](https://github.com/pencil2d/pencil/issues/1179) Currently there's an audio delay of 1-2 frames for in-editor playback & exported files. However on some systems the opposite happens where the audio delay on playback might be longer by 12-16 or more frames, but on export it works ok.
+- [#1186](https://github.com/pencil2d/pencil/issues/1186) Quick Sizing is enabled on Paint Bucket Tool, but does nothing.
 - [#1189](https://github.com/pencil2d/pencil/issues/1189) Zoom shortcut on drawing tools not working properly with the Middle Mouse Button (Win) and mouse input in general (macOS)
-- [#1196](https://github.com/pencil2d/pencil/issues/1196) A unerasable stroke appears when drawing if you turn off the pressure sensitivity checkbox with drawing tools.
-- [#1195](https://github.com/pencil2d/pencil/issues/1195) The update check prompts an error because there is currently no other update to get
+- [#1192](https://github.com/pencil2d/pencil/issues/1192) When using the flipping & rolling feature, if you quickly try to drag the scrub header when the action occurs, Pencil2D will crash. (there is a fix already awaiting approval)
 - [#1193](https://github.com/pencil2d/pencil/issues/1193) The feather slider widget (Brush Tool) has a higher max value than the input value, and any value above 96 pixels will not allow you to paint.
+- [#1195](https://github.com/pencil2d/pencil/issues/1195) The update check prompts an error because there is currently no other update to get
+- [#1196](https://github.com/pencil2d/pencil/issues/1196) A unerasable stroke appears when drawing if you turn off the pressure sensitivity checkbox with drawing tools.
 - Playing back audio from any frame other than the first will slightly off-sync the audio in the editor. For now we recommend playing back sounds from the beginning and gauging the sound particularly for lipsync or musicalized action. Afterwards check your output with a dedicated video editor to avoid sync issues.
 - Color Palette (Bitmap): First Swatch is unchangeable. Can’t use replace command. Use the other swatches to create your own colors or change it by editing the palette in a vector layer or via XML.
 - Color Palette (Bitmap): Swatches will only update using the Replace command when having a vector layer active. (Note: Create your custom palettes with a vector layer selected)
@@ -113,10 +114,10 @@ While there seems to be a growing list of Know issues, make no mistake, we are w
 - Undo: Undoing a drawing modification made on an empty frame creates a keyframe on that frame.
 - Undo: Undoing moving a keyframe to a new frame will create a blank keyframe on the place where it used to be.
 - Undo, Smudge Tool (Bitmap): You cannot UNDO the smudge tool at the moment.
-- Blur Tool (Bitmap): Pressing `ALT` with smudge tool doesn’t work, do not use it. Use other drawing apps for smudge effects.
+- Blur Tool (Bitmap): Pressing ALT with smudge tool doesn’t work, do not use it. Use other drawing apps for smudge effects.
 - Fill Tool (Vector): Filling a stroke requires the stroke to be selected.
 - Fill Tool (Vector): “stroke thickness” option will reset pressure sensitive lines width.
-- In general the Vector Engine is not ready for production use, please avoid using it for serious work.
+- In general the Vector Engine is a WIP or not working as intended. Much more work will be required, please don't use it.
 
 ## Help improve Pencil2D
 
