+ Added pending fixed issues + Modified longer descriptions of certain issues + Changed "tweaks" heading to "enhancements" to preserve writing style - Remove already fixed known issues

--- a/_posts/2019-05-05-pencil2d-0.6.4-release.md
+++ b/_posts/2019-05-05-pencil2d-0.6.4-release.md
@@ -9,13 +9,15 @@ published: false
 comments: false
 ---
 
-Yes, your eyes are not deceiving you, we have another release for you! A mere 1.5 months after v0.6.3, we are releasing v0.6.4. This is a is part of a new release strategy we are testing out right now, more details can be found on that below. The gist is that this release only has bugfixes so that we can make your experience as stable and trouble-free as possible.
+Yes, your eyes are not deceiving you, we have another release for you! A mere 2 months after v0.6.3, we are releasing v0.6.4. This is a is part of a new release strategy we are testing out right now, more details can be found on that below. The gist is that this release only has bugfixes so that we can strive to make your experience as stable and trouble-free as possible.
 
 Many thanks to all the people who helped to make this release possible.
 
 [0]: https://www.pencil2d.org/download
 [ryyharris]: https://github.com/ryyharris
 [candyface]: https://github.com/CandyFace
+[davidlamhauge]: https://github.com/davidlamhauge
+[mapreri]: https://github.com/mapreri
 
 ## Fixes
 - [0e041d9](https://github.com/pencil2d/pencil/commit/0e041d98438c4ecca7d73c1bf1e15eafe61f85b9) Fix crash when trying to manually scrub while flipping.
@@ -32,13 +34,16 @@ Many thanks to all the people who helped to make this release possible.
 - [1dc46e6](https://github.com/pencil2d/pencil/commit/1dc46e63942298a83ec67b0b83c5c2e1e15d595d) Fix bucket tool occasionally filling the wrong pixel.
 - [c0af82a](https://github.com/pencil2d/pencil/commit/c0af82a8243cf6107c663ca6026fdbeac2f706ad) Fix semi-permanent display bug when right clicking in the middle of a stroke.
 - [e33fabb](https://github.com/pencil2d/pencil/commit/e33fabb00e0290d1111742bf4681da84915d5855) Fix autocropping for frames loaded from a file.
-- [c24487d](https://github.com/pencil2d/pencil/commit/c24487d739eb5291713539afd53234c13235a0ab) Fix crash when there is no previous frame, by creating a new one if necessary.
-- [#1295](https://github.com/pencil2d/pencil/issues/1195) Fix update checker on Windows.
-- [#1170](https://github.com/pencil2d/pencil/issues/1170) Fix incorrect redo text (by [ryyharris](ryyharris)).
+- [a61ec8b](https://github.com/pencil2d/pencil/commit/a61ec8ba2e090f58f6e86673058db5f3157eda80) Fix general UI & Tooltip typos. (by[mapreri](mapreri))
 - [#1015](https://github.com/pencil2d/pencil/issues/1015) Fix inverted active layer focus shortcuts (by [ryyharris](ryyharris)).
+- [#1170](https://github.com/pencil2d/pencil/issues/1170) Fix incorrect redo text (by [ryyharris](ryyharris)).
+- [#1192](https://github.com/pencil2d/pencil/issues/1192) Fix crash for Flipping & Rolling feature when clicking on timeline + General improvements (by [davidlamhauge](davidlamhauge))
+- [#1195](https://github.com/pencil2d/pencil/issues/1195) Fix update checker on Windows.
+- [#1211](https://github.com/pencil2d/pencil/pull/1211), [c24487d](https://github.com/pencil2d/pencil/commit/c24487d739eb5291713539afd53234c13235a0ab) Fix crash on vector layers when drawing on empty frame without existing previous keyframe.
 
-## Tweaks
-- [c9e1ba6](https://github.com/pencil2d/pencil/commit/c9e1ba68adeeb98d380a3e3c8926d7af61a18fb4), [4b6e55a](https://github.com/pencil2d/pencil/commit/653a6b28467ec4f34b3e5ee888f11b5944ca755f) Tweak flipping behavior.
+## Enhancements
+- [c9e1ba6](https://github.com/pencil2d/pencil/commit/c9e1ba68adeeb98d380a3e3c8926d7af61a18fb4) Fix canvas flip icons in main menu
+- [4b6e55a](https://github.com/pencil2d/pencil/commit/653a6b28467ec4f34b3e5ee888f11b5944ca755f) Tweak frame flipping timing & behavior.
 - [4f31fe6](https://github.com/pencil2d/pencil/commit/4f31fe63019b99861a4281b52c385cd24b204145) Set minimum value for the bucket fill tolerance to 0.
 - [1a1238d](https://github.com/pencil2d/pencil/commit/1a1238d69b923bd0bc5523860a757282b8775abf) Reset the autosave counter if the user manually saves.
 - [8cc1f8b](https://github.com/pencil2d/pencil/commit/8cc1f8bddee29db47b1cfa85c771f66bb3e529a4), [e1db3a7](https://github.com/pencil2d/pencil/commit/e1db3a797daa8c5e78f86ce9b8deb635389a8ba9) Add more warnings when attempting to modify a hidden layer.
@@ -54,11 +59,11 @@ Many thanks to all the people who helped to make this release possible.
 <!-- TODO Update line below -->
 While there seems to be a growing list of Know issues, make no mistake, we are working hard on reviewing and fixing them as thoroughly as possible, and with this release you'll notice plenty of improvements on key areas so don't worry!
 
-- [#748](https://github.com/pencil2d/pencil/issues/748), [#1004](https://github.com/pencil2d/pencil/issues/1004), [#1098](https://github.com/pencil2d/pencil/issues/1098), [#1120](https://github.com/pencil2d/pencil/issues/1120), [#1170](https://github.com/pencil2d/pencil/issues/1170) Miscellaneous undo/redo issues. Should hopefully be fixed in v0.6.5.
+- [#748](https://github.com/pencil2d/pencil/issues/748), [#1004](https://github.com/pencil2d/pencil/issues/1004), [#1098](https://github.com/pencil2d/pencil/issues/1098) Miscellaneous undo/redo issues. Possible fixes will be reviewed for v0.6.5.
 - [#1033](https://github.com/pencil2d/pencil/issues/1033) Sound import and playback does not work with the Linux AppImage. Workaround: use [flatpak](https://flathub.org/apps/details/org.pencil2d.Pencil2D) or your distro package manager (if it offers the latest version).
 - [#1117](https://github.com/pencil2d/pencil/issues/1117) The CLI (Command-Line Interface) export operation consumes more memory than exporting from within the editor itself.
 - [#1019](https://github.com/pencil2d/pencil/issues/1019) The program may crash or erase selection content when using the `ALT + TAB / APPLE + TAB / SHIFT + TAB` shortcut.
-- [#1120](https://github.com/pencil2d/pencil/issues/1120) Undoing Selection Flip X / Y will delete the drawing instead.
+- [#1120](https://github.com/pencil2d/pencil/issues/1120) Undoing Selection Flip X / Y will delete the drawing instead. A possible fix will be reviewed for v0.6.5.
 - [#1133](https://github.com/pencil2d/pencil/issues/1133) Lag and buggy strokes with Huion tablets. Workaround: disabling the "linear optimizer" in your tablet driver may help if that option is available, see [this post](https://discuss.pencil2d.org/t/difficulty-with-tablet/1369/9?u=scribblemaniac).
 - [#1174](https://github.com/pencil2d/pencil/issues/1174) Inconsistent palette import behavior: Depending on which palette file format is used, the new palette may append or overwrite the existing palette.
 - [#1177](https://github.com/pencil2d/pencil/issues/1177) Imported image position is modified by the canvas view center
