Finish up v0.6.4 release post

--- a/_posts/2019-05-31-pencil2d-0.6.4-release.md
+++ b/_posts/2019-05-31-pencil2d-0.6.4-release.md
@@ -9,7 +9,7 @@ published: false
 comments: false
 ---
 
-Yes, your eyes are not deceiving you, we have another release for you! A mere 1.5 months after v0.6.3, we are releasing v0.6.4. This is a is part of a new release strategy we are testing out right now, more details can be found on that below. The gist is that this release only has bugfixes so that we can make your experience as stable and trouble-free as possible.
+Yes, your eyes are not deceiving you, we have another release for you! A only 2 months after v0.6.3, we are releasing v0.6.4. This is part of a new release strategy we are testing out right now, more details can be found on that below. The gist of it is that this release only has bugfixes so that we can make your experience as stable and trouble-free as possible.
 
 Many thanks to all the people who helped to make this release possible.
 
@@ -23,7 +23,7 @@ Many thanks to all the people who helped to make this release possible.
 - [96dca6d](https://github.com/pencil2d/pencil/commit/96dca6dcde1e85f1b7a6425dc7a1faa4255196b6) Fix some move export issues on Windows.
 - [97f5891](https://github.com/pencil2d/pencil/commit/4b6e55a1e6a00a235e5e63961245cbf3c6234be5), [7a41226](https://github.com/pencil2d/pencil/commit/7a41226361bdb6763a488e0697c90cdf94610ab1), [168bb1f](https://github.com/pencil2d/pencil/commit/168bb1f91582b90a4e3f1d436d88746f76e5e9d5) Fix various English typos throughout the program.
 - [d3a41d3](https://github.com/pencil2d/pencil/commit/d3a41d3186ab2f7184cf35750d6b88b6336d1ef8), [fddf846](https://github.com/pencil2d/pencil/commit/fddf8465ea82300ee83cce030965757de7fabad9), [ef235f0](https://github.com/pencil2d/pencil/commit/ef235f0f50f8a97ca221907eae84c385933f53b1) Fix some subtle display issues.
-- [b43b024](https://github.com/pencil2d/pencil/commit/b43b024c966df770f864dd8db93bebc03dc0f9f7) Fix a potential program crash when deleting a keyframe while a selection is active (by [Oliver Stevns](https://github.com/CandyFace) with alternate solution by [ryyharris](ryyharris)).
+- [b43b024](https://github.com/pencil2d/pencil/commit/b43b024c966df770f864dd8db93bebc03dc0f9f7) Fix a potential program crash when deleting a keyframe while a selection is active (by [Oliver Stevns](candyface) with alternate solution by [ryyharris](ryyharris)).
 - [9942932](https://github.com/pencil2d/pencil/commit/9942932844d9dadc390777fd15c0b5a2dfc7d3af) Fix transformations temporarily applying to all frames during playback.
 - [5aa4d9c](https://github.com/pencil2d/pencil/commit/5aa4d9cdfa431ea822b713a0f43e56a419c3b172) Fix the first item in the color palette not changing the bitmap brush color.
 - [b293c28](https://github.com/pencil2d/pencil/commit/b293c28cd0f27896c8ed09545fc1804d86b637e9) Fix a partial file wipe issue when using Save As to convert pclx files to pcl files.
@@ -47,12 +47,13 @@ Many thanks to all the people who helped to make this release possible.
 
 ## New Versioning Scheme
 
-<!-- TODO Describe odd-even versioning and new release schedule -->
+So what is this new release schedule we mentioned in the introduction? Well basically, all of the members of our team got together for a meeting and identified multiple issues with the way that we are currently releasing new versions of Pencil2D. Among these issue was the fact that some of the big changes we have been making or new features we have been adding are introducing new bugs into our program. Since there is a long time between releases, these bugs don't get fixed quickly and we are left with a lot of users complaining about the same issues. We initially made release candidates, but they proved ineffective in finding bugs because nobody would use them. To address this, we will not be making release candidates anymore and will instead be releasing a bug fix version a relatively short time after each feature release so that we can quickly fix bugs resulting from big changes and distribute those fixes to our users in a timely manner.
+
+This release, and all future releases ending in an even number will be bug fix releases. These releases will not introduce any new functionality, but we still strongly recommend you update so that you can avoid potential crashes and other issues. All versions ending in an odd number will be feature releases. The next release, v0.6.5 will be one such release and is slated to have many new features including possibly a new undo/redo system, x-sheet support, new layer manipulation operations, and more. Because they require more work, the feature releases will take longer than the bug fix releases.
 
 ## Known Issues
 
-<!-- TODO Update line below -->
-While there seems to be a growing list of Know issues, make no mistake, we are working hard on reviewing and fixing them as thoroughly as possible, and with this release you'll notice plenty of improvements on key areas so don't worry!
+This released focused on fixing as many issues a possible, however as a small team, there are only so many things we can fix at a time. Here is a non-exhaustive list of bugs that we are already aware of, but were unable to fix in this release. Rest assured, we will do our best to fix all of them eventually.
 
 - [#748](https://github.com/pencil2d/pencil/issues/748), [#1004](https://github.com/pencil2d/pencil/issues/1004), [#1098](https://github.com/pencil2d/pencil/issues/1098), [#1120](https://github.com/pencil2d/pencil/issues/1120), [#1170](https://github.com/pencil2d/pencil/issues/1170) Miscellaneous undo/redo issues. Should hopefully be fixed in v0.6.5.
 - [#1033](https://github.com/pencil2d/pencil/issues/1033) Sound import and playback does not work with the Linux AppImage. Workaround: use [flatpak](https://flathub.org/apps/details/org.pencil2d.Pencil2D) or your distro package manager (if it offers the latest version).
