--- a/_posts/2019-05-31-pencil2d-0.6.4-release.md
+++ b/_posts/2019-05-31-pencil2d-0.6.4-release.md
@@ -5,7 +5,7 @@ tagline: ""
 categories: "Release Note"
 image: '{{ "/images/pencil_icon.png" | relative_url }}'
 author: "The Pencil2D Team"
-published: false
+published: true
 comments: false
 ---
 
