Fix spelling mistake in v0.6.4 release announcement

--- a/_posts/2019-05-31-pencil2d-0.6.4-release.md
+++ b/_posts/2019-05-31-pencil2d-0.6.4-release.md
@@ -9,7 +9,7 @@ published: true
 comments: false
 ---
 
-Yes, your eyes are not deceiving you, we have another release for you! A only 2 months after v0.6.3, we are releasing v0.6.4. This is part of a new release strategy we are testing out right now, more details can be found on that below. The gist of it is that this release only has bugfixes so that we can make your experience as stable and trouble-free as possible.
+Yes, your eyes are not deceiving you, we have another release for you! Only 2 months after v0.6.3, we are releasing v0.6.4. This is part of a new release strategy we are testing out right now, more details can be found on that below. The gist of it is that this release only has bugfixes so that we can make your experience as stable and trouble-free as possible.
 
 Many thanks to all the people who helped to make this release possible.
 
