Fix jekyll code parsing
The announcement was showing up in the website because the jekyll code was not being parse properly. It has two dashes `--` instead of three `---`

--- a/_posts/2020-07-31-pencil2d-0.6.5-release.md
+++ b/_posts/2020-07-31-pencil2d-0.6.5-release.md
@@ -1,4 +1,4 @@
---
+---
 layout: post
 title: Pencil2D v0.6.5 released!
 tagline: ""
@@ -6,7 +6,7 @@ categories: "Release Note"
 image: '{{ "/images/pencil_icon.png" | relative_url }}'
 author: "The Pencil2D Team"
 published: false
-comments: true
+comments: false
 
 ---
 | Contents                                              |
